src/objects/Price_Table__c.object
<CustomObject>
    <fields>
        <fullName>Rate_Year__c</fullName>
        <label>Rate Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>18/19</fullName>
                </value>
                <value>
                    <fullName>19/20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Price Table</relationshipLabel>
        <relationshipName>Price_Table</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price Table</label>
    <nameField>
        <label>Price Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>